src/App.css
/* index.css */
body{
  margin: 0;
  padding: 0;
  font-family: Arial, sans-serif;
  background-color: #2C302E;
  color: #9AE19D;
  height: 100vh;
  width: 100vw;
  overflow: hidden;
}
.App{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  height: 100vh;
}
.Chat-Instance {
  font-family: Arial, sans-serif;
  display: flex;
  justify-content: space-between;
  background-color: #2C302E;
  padding: 20px;
  padding-bottom: 0px;
  margin: 0;
  height: 100vh;
  color: #9AE19D;
}

#chat-container
{
  display: flex;
  flex-direction: column;
  width: 55%;
  background-color: #474A48;
  border-radius: 10px;
  padding: 20px;
  box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
  height: 90%;
  justify-content: space-between;
  
}
#interpreter-container {
  display: flex;
  flex-direction: column;
  width: 37%;
  background-color: #474A48;
  padding: 20px;
  box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
  height: 90%;
  border-radius: 10px;
  justify-content: space-between;

}


#chat-form {
  display: flex;
  gap: 5px;
  background-color: #2C302E;
  padding: 10px;
  border-radius: 5px;
}

h1 {
  margin: 0;
}
#python-title {
  margin-bottom: 0px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
h2 {
  margin: 0px;
  margin-bottom: 10px;
}

/* style.css */

#chat-area,
#interpreter-area {
  height: 75%;
  overflow-y: scroll;
  padding: 10px;
  margin-bottom: 10px;
}
#interpreter-area {
  font-size: 12px;
}

#chat-area{
  font-size: 16px;
}

#user-input{
  flex-grow: 1;
  height: 30px;
  flex-grow: 1;
  padding: 5px;
  border-radius: 5px;
  width: 100%;
  font-size: 16px;

}
#interpreter-output {
  overflow-y: scroll;
  padding: 10px;
  border-radius: 5px;
  background-color: none;
  color: #ffffff;
  border-radius: 5px;
  font-family: "Courier New", Courier, monospace;
  font-size: 12px;
  overflow-y: scroll;
  max-height: 200px;
  white-space: pre-wrap;

  
}


button {

  background-color: #2C302E;
  color: #ffffff;
  border: none;
  border-radius: 5px;
  padding: 5px 10px;
  cursor: pointer;
}

button:hover {
  background-color: #9AE19D;
  color:#2C302E;
}

input[type="file"] {
  display: none;
}

label[for="file-input"] {
  background-color: gray;
  color: #ffffff;
  border: none;
  border-radius: 5px;
  padding: 5px 10px;
  cursor: pointer;
}
label[for="file-input"]:hover {
  background-color: black;
}

.assistant-message {
  color: white; /* Assistant message color (green) */
}

.user-message {
  margin-top: 0;
  color: #62D067; /* User message color (blue) */
}
.system-message {

  color: #a91c1c;
}

.interpreter-message {
  color: #f44336; /* Interpreter message color (red) */
}

.assistant-message-before-res2 {
  color: rgb(180, 174, 174);
}

.assistant-message-after-res2 {
  color: white;
}

.chat-code-snippet {
  display: block;
  background-color: #474A48;
  padding: 10px;
  border-radius: 4px;
  font-family: "Courier New", monospace;
  /*font color*/
  /* color: #ffffff; */
}

/* For WebKit browsers like Chrome, Safari, and Opera */
#chat-area::-webkit-scrollbar, #interpreter-area::-webkit-scrollbar, #interpreter-output::-webkit-scrollbar {
  width: 6px; /* Adjust the width of the scrollbar */
  max-height: 5px; /* Adjust the height of the scrollbar */

}

#chat-area::-webkit-scrollbar-track, #interpreter-area::-webkit-scrollbar-track, #interpreter-output::-webkit-scrollbar-track {
  background-color: transparent; /* Make the track/background transparent */

}

#chat-area::-webkit-scrollbar-thumb, #interpreter-area::-webkit-scrollbar-thumb, #interpreter-output::-webkit-scrollbar-thumb {
  background-color: rgba(154, 225, 157, 0); /* Adjust the color of the scrollbar thumb and set initial opacity to 0 */
  border-radius: 3px;
  transition: background-color 3.0s ease-in-out;
      }

#chat-area:hover::-webkit-scrollbar-thumb, #interpreter-area:hover::-webkit-scrollbar-thumb, #interpreter-output:hover::-webkit-scrollbar-thumb,
#chat-area:active::-webkit-scrollbar-thumb, #interpreter-area:active::-webkit-scrollbar-thumb, #interpreter-output:active::-webkit-scrollbar-thumb {

  transition: background-color 3.0s ease-in-out;
  background-color: rgba(154, 225, 157, 1); /* Change the opacity of the scrollbar thumb to 1 when hovering over or actively scrolling the container */
}

/* Add this to your App.css */
.sidebar-container {
  /* display: flex;
  flex-direction: column;
  justify-content: center;
  width: 12%;
  height: 100%;
  background-color: #2C302E;
  padding: 20px;
  overflow-y: auto;
  text-align: center; */
  padding:20px;

  border-radius: 10px;
  /* height: 100%; */
  justify-content: space-between;
  padding:20px;
  padding-right: 0px;
  height: 100%;
  
}
.sidebar {
  display: flex;
  flex-direction: column;
  align-items: center;
  border-radius: 10px;
  padding: 20px;
  background-color: #474A48;
  box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
  height: 90%;
  /* width: 100%;
  background-color: #474A48;
  border-radius: 5px;
  overflow-y: auto; */

}

.chat-container {
  width: 100%;
}
.active-chat {
  font-weight: bold;
  color: #C0ECC2;
  /* create highlight effect */
  text-shadow: white 0 0 10px;


}

.toggle-sidebar-btn{
  width: 2%;
  padding: 0;
  margin:0;
  opacity: 0;
  transition: opacity 0.3s ease-in-out;
  position: -webkit-sticky; /* For Safari on iOS 7+ */
  position: sticky; /* For modern browsers */
  margin-right: -20px; /* Add this line */
}

.toggle-sidebar-btn:hover{
  opacity: 1;
}
.instances-container p:hover {
  cursor: pointer;
  color: #C0ECC2;
  /* create highlight effect */
  text-shadow: white 0 0 10px;
}

.delete-instance-btn{
  display: none;
}
/* .instances-container p:hover .delete-instance-btn{
  display: inline;
} */

.instances-container p {
  position: relative;
}
.sidebar:hover .delete-instance-btn{
  display: inline;

}

.delete-instance-btn {
  position: absolute;
  right: 85px;
  display: none;
  margin: 0px;
  padding: 2px;
  background-color: #474A48;
}

/* .instances-container:hover .delete-instance-btn {
  display: inline;
} */

.placeholder-screen{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  height: 95.5%;
  width: 100%;
  margin-top: 20px;
  margin: 20px;
  background-color: #474A48;
  border-radius: 10px;
  box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);

}

